testdata/ttcn3-conformance-tests/ATS/core_language/16_functions_altsteps_testcases/1601_functions/160102_predefined_functions/NegSem_160102_predefined_functions_045.ttcn
/***************************************************
 ** @author   STF T003
 ** @version  0.0.1
 ** @purpose  1:16.1.2, Ensure that the IUT recognizes predefined functions and correctly evaluates them (as specified by Annex C)
 ** @verdict  pass reject
 ***************************************************/

// The following requirement is tested:
// C.2.1 In addition to the general error causes in clause 16.1.2, error causes are:
// the template passed to the invalue parameter is not of type bitstring, hexstring, octetstring, charstring, universal charstring,record of, set of, or array.

module NegSem_160102_predefined_functions_045 {

    type component GeneralComp {
	}

    type enumerated EDays {
        Monday(0), Tuesday(1), Wednesday(2), Thursday(3), Friday(4)
    };

    template EDays MyEnum := Monday;

    testcase TC_NegSem_160102_predefined_functions_045() runs on GeneralComp {
	var integer v_i;

 	v_i:=lengthof(MyEnum);		// error: template is an enum
 	setverdict(pass);
	}

	control {
		execute(TC_NegSem_160102_predefined_functions_045());
	}
}